Getting report images from rails

--- a/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
+++ b/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
@@ -33,13 +33,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="gDW-JI-eGE">
-                                <rect key="frame" x="58" y="124" width="204" height="142"/>
+                                <rect key="frame" x="58" y="104" width="204" height="142"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gDW-JI-eGE" secondAttribute="height" multiplier="240:167" id="kft-tS-mue"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XTl-6v-oZu" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
-                                <rect key="frame" x="36" y="306" width="248" height="40"/>
+                                <rect key="frame" x="36" y="286" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="1mr-OA-E2N"/>
                                 </constraints>
@@ -69,7 +69,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D0F-ik-q0a" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
-                                <rect key="frame" x="36" y="361" width="248" height="40"/>
+                                <rect key="frame" x="36" y="341" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="aA2-sR-Mi3"/>
                                 </constraints>
@@ -102,7 +102,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EY0-vS-or1">
-                                <rect key="frame" x="142" y="411" width="142" height="30"/>
+                                <rect key="frame" x="142" y="391" width="142" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="6VC-DC-wNb"/>
                                 </constraints>
@@ -1098,7 +1098,7 @@
                     </view>
                     <connections>
                         <segue destination="RWm-sl-ThK" kind="unwind" unwindAction="unWindToViewControllerWithSender:" id="nG5-GE-71m"/>
-                        <segue destination="dDb-0Q-25a" kind="show" identifier="catToNew" id="J8H-5f-i5T"/>
+                        <segue destination="dDb-0Q-25a" kind="presentation" identifier="catToNew" id="J8H-5f-i5T"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HnO-j6-iQQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1211,7 +1211,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C2C-06-Va5">
-                                <rect key="frame" x="0.0" y="64" width="320" height="636"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="680"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sVA-dc-DCF" userLabel="ContentView">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="680"/>
